--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
+    "gsap": "^3.13.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "prismjs": "^1.29.0",
